[tool.poetry]
authors = ["Mao Yibo <maoyibo@gmail.com>"]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = ""
name = "fastq_statistic"
readme = "README.md"
version = "0.1.2"
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
fastq-statistic = "fastq_statistic.main:app"

[tool.poetry.dependencies]
matplotlib = "^3.3.3"
numpy = "^1.19.5"
pandas = "^1.2.0"
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
default = true
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
